--- a/studio/package.json
+++ b/studio/package.json
@@ -17,6 +17,7 @@
     "@sanity/base": "^2.12.2",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.12.2",
+    "@sanity/dashboard": "^2.10.5",
     "@sanity/default-layout": "^2.12.2",
     "@sanity/default-login": "^2.11.1",
     "@sanity/desk-tool": "^2.12.2",
@@ -24,7 +25,8 @@
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-barcode": "^1.3.2",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "sanity-plugin-dashboard-widget-netlify": "^1.1.0"
   },
   "devDependencies": {},
   "repository": {
